# peft_unlearning

./: .gitignore  README.md  clear_logs.sh  jupyter.sh  justfile  pyproject.toml  requirements.txt
jobs/: 1B_job.sh  eval_1Bs.sh  eval_job.sh  eval_model.sh  reeval.sh  semeval_eval.sh  spawn_1B_evals.sh  spawn_1B_jobs.sh  spawn_unlearn_jobs.sh  test_loss.sh  unlearn-7B.sh  unlearn_job.sh
jobs/old_jobs/: unlearn.sh
jupyter/: .gitignore  bitnet_example.ipynb  download_model.py  eval_results.ipynb  results.ipynb  semeval.ipynb  semeval.sh  system_experiment_results.ipynb  system_paper_experiment_results.ipynb  text_generation_test.py  unlearn.py
semeval/submissions/: submission_01.py  submission_02.py  submission_03.py  submission_05.py
src/: download_model.py  eval_job.sh  just_eval.sh  metrics.py  reeval.sh  semeval.sh  submit_7B.sh  submit_7B_loras.sh  submit_jobs.sh  submit_quick.sh  test_loss.sh  test_loss2.sh  unlearn-7B.sh  unlearn.py  unlearn.sh  unlearn_eval.sh
src/datasets/: __init__.py  loading.py
src/jobs/: grid_eval.sh
src/models/: __init__.py  lora_linear.py  lora_model.py  unlearning_model.py
src/scripts/: semeval_evaluation.py
src/semeval/: submission.py  submission_01.py  submission_02.py  submission_03.py  submission_04.py  submission_05.py
src/unlearn_loading/: __init__.py  downloads.py
src/unlearn_loading/sample_ids/: forget_train_ids.txt  forget_val_ids.txt  retain_train_ids.txt  retain_val_ids.txt
