[project]
name = "peft-unlearning"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.4.0",
    "datasets>=3.3.1",
    "huggingface-hub>=0.29.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy<2",
    "pandas>=2.2.3",
    "protobuf>=5.29.3",
    "pyarrow>=19.0.1",
    "rouge-score>=0.1.2",
    "safetensors>=0.5.2",
    "scikit-learn>=1.6.1",
    "sentencepiece>=0.2.0",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]
